plugins {
    id 'java-library'
}

java {
    sourceCompatibility = '23'
    targetCompatibility = '23'
}

repositories {
    mavenCentral()
}

dependencies {
    // Loom is technology agnostic, no external dependencies should be added here
    // other than test dependencies or pure standard APIs if strictly needed.
    
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs += ['--enable-preview']
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}
